<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rofiq.app1.MainActivity"
    tools:showIn="@layout/app_bar_dzikirpd">

    <TextView
        android:id="@+id/textPilih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:text="@string/pilihwarna"
        />
    <RadioGroup
        android:id="@+id/radiogrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textPilih">

    <RadioButton
        android:id="@+id/radiomerah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/radio_merah"/>

    <RadioButton
        android:id="@+id/radiohijau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_hijau"/>
    <RadioButton
        android:id="@+id/radiobiru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_biru"/>
    <RadioButton
        android:id="@+id/radiocoklat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_coklat"
        />
    <RadioButton
        android:id="@+id/radioungu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_ungu"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnJawab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radiogrup"
        android:text="@string/jawab"/>


</RelativeLayout>
